--- a/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
+++ b/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
@@ -22,7 +22,7 @@ Do not modify the content in those folders.
 }
 
 .carousel{
-    margin-top: 20px;
+/*    margin-top: 20px;*/
 /*    height: 50%;*/
 }
 
