--- a/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
+++ b/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
@@ -8,44 +8,51 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
+
 /*
 The Bootstrap CSS (and JS) can be found in the separate css, fonts, and js folders.
 Do not modify the content in those folders.
 */
 
-
-.item{
+.item {
     background: white;
     text-align: center;
     height: 500px !important;
     width: 100% !important;
 }
 
-.carousel{
-/*    margin-top: 20px;*/
-/*    height: 50%;*/
+.carousel {
+    /*    margin-top: 20px;*/
+    /*    height: 50%;*/
 }
 
-.bs-example{
-	margin: 20px;
+.bs-example {
+    margin: 20px;
 }
 
 .carousel.carousel-fade .item {
-  opacity:0;
-  filter: alpha(opacity=0); /* ie fix */
+    opacity: 0;
+    filter: alpha(opacity=0);
+    /* ie fix */
 }
 
 .carousel.carousel-fade .active.item {
-    opacity:1;
-    filter: alpha(opacity=100); /* ie fix */
+    opacity: 1;
+    filter: alpha(opacity=100);
+    /* ie fix */
 }
 
+.fm1 {
+    background-color: #ff6700;
+}
 
+.fm2 {
+    background-color: #029c9a;
+}
 
-
-
-
-
+.fm3 {
+    background-color: #ee1882;
+}
 
 /*------------------Starting of FOOTER---------------*/
 
