--- a/slider/custom.css
+++ b/slider/custom.css
@@ -1,62 +1,3 @@
-.background-img {
-    /* make sure the background image's div is the same height as viewport */
-    height: 100vh;
-    /* make sure the image is stretched out to cover the whole viewport */
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    /* make sure when the viewport resizes to a smaller size, the image is still centered, as opposed to anchored on the upper left corner */
-    background-position: center center;
-    background-attachment: fixed;
-}
-
-.carousel-inner > .item > img,
-.carousel-inner > .item > a > img {
-    width: 0%;
-    margin: auto;
-}
-
-#intro #intro-text {
-    margin-top: 45%;
-}
-
-#featured_1 {
-    background-image: url(img/featuredimages/background1-1.jpg);
-}
-
-#featured_2 {
-    background-image: url(img/featuredimages/background2-1.jpg);
-}
-
-#featured_3 {
-    background-image: url(img/featuredimages/background3.jpg);
-}
-
-#featured_5 {
-    background-image: url(img/featuredimages/background4.jpg)
-}
-
-#featured_6 {
-    background-image: url(img/background/1.jpg)
-}
-
-footer {
-    background-color: #EEEEEE;
-    /* overwrite default margin, so there won't be two white bars above and below footer */
-    margin: 0;
-    /* more breathing room for the footer */
-    padding: 20% 0;
-}
-
-footer h6 {
-    font-family: "helvetica neue";
-    /* thinner font weight to match the delicate visual style and subtle background color */
-    font-weight: 300;
-    color: #4c4c4c;
-}
-
-
 /* navbar default controls background color of navbar, and positioning of navbar */
 
 .navbar-default {
@@ -91,10 +32,11 @@ footer h6 {
 
 #work img {
     width: 100%;
+    height: 50%;
 }
 
 #work #twocolumngallery {
-    margin-top: 10em;
+    margin-top: 2em;
     margin-bottom: 10em;
 }
 
