--- a/slider/custom.css
+++ b/slider/custom.css
@@ -30,10 +30,13 @@
     margin: 0;
 }
 
+
+/*
 #work img {
     width: 100%;
     height: 50%;
 }
+*/
 
 #work #twocolumngallery {
     margin-top: 2em;
@@ -75,6 +78,21 @@
     position: absolute;
     left: 38%;
     top: 45%;
+}
+
+#h-vat {
+    background-color: #ff7473;
+    height: 500px;
+}
+
+#h-mmd {
+    background-color: #ffc952;
+    height: 500px;
+}
+
+#h-ani {
+    background-color: #47b8e0;
+    height: 500px;
 }
 
 
