--- a/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
+++ b/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
@@ -14,14 +14,14 @@ The Bootstrap CSS (and JS) can be found in the separate css, fonts, and js folde
 Do not modify the content in those folders.
 */
 
-.allslider img {
+.homeSlider img {
     width: 100%;
     height: 50%;
-}
 
-.allslider #twocolumngallery {
-    margin-top: 2em;
-    margin-bottom: 10em;
+}
+#vatS1 {
+    height: 100vh;
+
 }
 
 
