--- a/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
+++ b/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
@@ -15,9 +15,13 @@ Do not modify the content in those folders.
 */
 
 #homeSlider img{
-/*    width: 100%;*/
-    height: 30%;
+    width: 100%;
+/*    height: 100vh;*/
 
+}
+
+.carousel-inner{
+    height: 70vh;
 }
 .allslider img{
 /*    width: 100%;*/
