--- a/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
+++ b/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
@@ -14,35 +14,31 @@ The Bootstrap CSS (and JS) can be found in the separate css, fonts, and js folde
 Do not modify the content in those folders.
 */
 
+/*-------------------header------------------*/
+.navbar-brand>img {
+   margin-top: -17%;
+}
+.navbar-brand>h1 {
+/*    font-family: 'Roboto Condensed', sans-serif;*/
+    font-family: 'Titillium Web', sans-serif;
+   margin-top: -3%;
+    margin-left: 0%;
+}
+.navbar-nav{
+    float: right;
+}
+/*-------------------end of header------------------*/
+
+
+/*-------------------slider------------------*/
 #homeSlider img {
     width: 100%;
     /*    height: 100vh;*/
 }
-
 .carousel-inner {
-    height: 70vh;
+/*    height: 70vh;*/
 }
-
-.allslider img {
-    /*    width: 100%;*/
-    height: 100%;
-}
-
-
-/*-------------------slider------------------*/
-
-.fm1 {
-    background-color: #ff6700;
-}
-
-.fm2 {
-    background-color: #029c9a;
-}
-
-.fm3 {
-    background-color: #ee1882;
-}
-
+/*-------------------end of slider------------------*/
 
 /*------------------Starting of FOOTER---------------*/
 
@@ -51,15 +47,15 @@ footer {
     /* overwrite default margin, so there won't be two white bars above and below footer */
     margin: 0;
     /* more breathing room for the footer */
-    padding: 5% 0;
+    padding: 3% 0 5% 0;
+}
+footer h4{
+    margin-left: 6%;
+    color: slategray;
 }
 
-footer h6 {
-    font-family: "helvetica neue";
-    /* thinner font weight to match the delicate visual style and subtle background color */
-    font-weight: 300;
-    color: dimgray;
+footer p {
+    margin-left: 6%;
+    color: slategray;
 }
-
-
-/*--------------------Ending of FOOTER------------------*/
+/*--------------------End of FOOTER------------------*/
