--- a/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
+++ b/wordpress/wp-content/themes/bare-bones-bootstrap-theme-master/style.css
@@ -14,7 +14,17 @@ The Bootstrap CSS (and JS) can be found in the separate css, fonts, and js folde
 Do not modify the content in those folders.
 */
 
+
+.container{
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
 /*-------------------header------------------*/
+.navbar-default> .container{
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
 .navbar-brand>img {
    margin-top: -17%;
 }
@@ -28,7 +38,6 @@ Do not modify the content in those folders.
     float: right;
 }
 /*-------------------end of header------------------*/
-
 
 /*-------------------slider------------------*/
 #homeSlider img {
